infrastructure/configs/gotify-bridge.yml
# gotify-bridge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify-bridge
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify-bridge
  template:
    metadata:
      labels:
        app: gotify-bridge
    spec:
      containers:
      - name: gotify-bridge
        image: druggeri/alertmanager_gotify_bridge:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gotify-bridge
  namespace: monitoring
spec:
  selector:
    app: gotify-bridge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
