infrastructure/configs/monitoring-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: monitoring
  annotations:
    cert-manager.io/clusterIssuer: vault-issuer
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: grafana.staging.myrobertson.net
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: grafana-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
  namespace: monitoring
spec:
  parentRefs:
  - name: gateway
    namespace: monitoring
  hostnames: ["grafana.staging.myrobertson.net"]
  rules:
  - backendRefs:
    - kind: Service
      name: kube-prometheus-stack-grafana
      port: 3000
